[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/Interactable.gd" type="Script" id=2]
[ext_resource path="res://assets/ost/Kevin MacLeod Pixelland.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/ground_tileset.png" type="Texture" id=4]
[ext_resource path="res://assets/hajagos_animation.png" type="Texture" id=5]
[ext_resource path="res://assets/spikes_tileset.png" type="Texture" id=6]
[ext_resource path="res://assets/sign.png" type="Texture" id=7]
[ext_resource path="res://assets/marks_tileset.png" type="Texture" id=8]
[ext_resource path="res://assets/sky.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=14]
0/name = "ground_tileset.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 10 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ground_tileset.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 11 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "ground_tileset.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 12 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "ground_tileset.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 13 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "ground_tileset.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="Animation" id=15]
resource_name = "Crouch"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Jump"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 8, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=21]
0/name = "spikes_tileset.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 23 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "spikes_tileset.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="CircleShape2D" id=22]
radius = 16.4924

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=25]
0/name = "marks_tileset.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 24 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Map Template" type="Node2D"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="background" type="Sprite" parent="."]
position = Vector2( 0, 40 )
scale = Vector2( 2.80417, 3.14074 )
z_index = -100
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="ground_tileset" type="TileMap" parent="."]
tile_set = SubResource( 14 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1507344, -1073741822, 0, -1507343, 0, 0, -1507342, 0, 0, -1507341, 0, 0, -1507340, 0, 0, -1507339, 0, 0, -1507338, 2, 0, -1572842, -1073741822, 0, -1572841, 0, 0, -1572840, 0, 0, -1572839, 0, 0, -1572838, 0, 0, -1572837, 0, 0, -1572836, 2, 0, -1441808, -1073741824, 0, -1441807, -1073741823, 0, -1441806, -1073741823, 0, -1441805, -1073741823, 0, -1441804, -1073741823, 0, -1441803, -1610612735, 0, -1441802, -1610612736, 0, -1507306, -1073741824, 0, -1507305, 1, 0, -1507304, 1, 0, -1507303, 1, 0, -1507302, 1, 0, -1507301, 1, 0, -1507300, -1610612736, 0, -1376272, -1073741824, 0, -1376271, -1073741823, 0, -1376270, -1073741823, 0, -1376269, -1073741823, 0, -1376268, -1073741823, 0, -1376267, -1610612735, 0, -1376266, -1610612736, 0, -1441770, -1073741824, 0, -1441769, 1, 0, -1441768, 1, 0, -1441767, 1, 0, -1441766, 1, 0, -1441765, 1, 0, -1441764, -1610612736, 0, -1310736, -1073741824, 0, -1310735, -1073741823, 0, -1310734, -1073741823, 0, -1310733, -1073741823, 0, -1310732, -1073741823, 0, -1310731, -1610612735, 0, -1310730, -1610612736, 0, -1376234, -1073741824, 0, -1376233, 1, 0, -1376232, 1, 0, -1376231, 1, 0, -1376230, 1, 0, -1376229, 1, 0, -1376228, -1610612736, 0, -1245200, -1073741824, 0, -1245199, -1073741823, 0, -1245198, -1073741823, 0, -1245197, -1073741823, 0, -1245196, -1073741823, 0, -1245195, -1610612735, 0, -1245194, -1610612736, 0, -1310698, -1073741824, 0, -1310697, 1, 0, -1310696, 1, 0, -1310695, 1, 0, -1310694, 1, 0, -1310693, 1, 0, -1310692, -1610612736, 0, -1179664, -1073741824, 0, -1179663, -1073741823, 0, -1179662, -1073741823, 0, -1179661, -1073741823, 0, -1179660, -1073741823, 0, -1179659, -1610612735, 0, -1179658, -1610612736, 0, -1245162, -1073741824, 0, -1245161, 1, 0, -1245160, 1, 0, -1245159, 1, 0, -1245158, 1, 0, -1245157, 1, 0, -1245156, -1610612736, 0, -1114128, -1073741824, 0, -1114127, -1073741823, 0, -1114126, -1073741823, 0, -1114125, -1073741823, 0, -1114124, -1073741823, 0, -1114123, 1, 0, -1114122, -1610612736, 0, -1179626, -1073741824, 0, -1179625, 1, 0, -1179624, 1, 0, -1179623, 1, 0, -1179622, 1, 0, -1179621, 1, 0, -1179620, -1610612736, 0, -1048592, -1073741824, 0, -1048591, -1073741823, 0, -1048590, -1073741823, 0, -1048589, -1073741823, 0, -1048588, -1073741823, 0, -1048587, 1, 0, -1048586, -1610612736, 0, -1114090, -1073741824, 0, -1114089, 1, 0, -1114088, 1, 0, -1114087, 1, 0, -1114086, 1, 0, -1114085, 1, 0, -1114084, -1610612736, 0, -983056, -1073741824, 0, -983055, -1073741823, 0, -983054, -1073741823, 0, -983053, -1073741823, 0, -983052, -1073741823, 0, -983051, 1, 0, -983050, -1610612736, 0, -1048554, -1073741824, 0, -1048553, 1, 0, -1048552, 1, 0, -1048551, 1, 0, -1048550, 1, 0, -1048549, 1, 0, -1048548, -1610612736, 0, -917520, -1073741824, 0, -917519, -1073741823, 0, -917518, -1073741823, 0, -917517, -1073741823, 0, -917516, -1073741823, 0, -917515, 1610612737, 0, -917514, -1610612736, 0, -983018, -1073741824, 0, -983017, 1, 0, -983016, 1, 0, -983015, 1, 0, -983014, 1, 0, -983013, 1, 0, -983012, -1610612736, 0, -851984, -1073741824, 0, -851983, -1073741823, 0, -851982, -1073741823, 0, -851981, -1073741823, 0, -851980, 1610612737, 0, -851979, 1610612737, 0, -851978, -1610612736, 0, -917482, -1073741824, 0, -917481, 1, 0, -917480, 1, 0, -917479, 1, 0, -917478, 1, 0, -917477, 1, 0, -917476, -1610612736, 0, -786448, -1073741824, 0, -786447, -1073741823, 0, -786446, -1073741823, 0, -786445, -1073741823, 0, -786444, 1610612737, 0, -786443, 1610612737, 0, -786442, -1610612736, 0, -851946, -1073741824, 0, -851945, 1, 0, -851944, 1, 0, -851943, 1, 0, -851942, 1, 0, -851941, 1, 0, -851940, -1610612736, 0, -720912, -1073741824, 0, -720911, -1073741823, 0, -720910, -1073741823, 0, -720909, -1073741823, 0, -720908, 1610612737, 0, -720907, 1610612737, 0, -720906, -1610612736, 0, -786410, -1073741824, 0, -786409, 1, 0, -786408, 1, 0, -786407, 1, 0, -786406, 1, 0, -786405, 1, 0, -786404, -1610612736, 0, -655376, -1073741824, 0, -655375, -1073741823, 0, -655374, -1073741823, 0, -655373, 1610612737, 0, -655372, 1610612737, 0, -655371, 1610612737, 0, -655370, -1610612736, 0, -720874, -1073741824, 0, -720873, 1, 0, -720872, 1, 0, -720871, 1, 0, -720870, 1, 0, -720869, 1, 0, -720868, -1610612736, 0, -589840, -1073741824, 0, -589839, 1610612737, 0, -589838, 1610612737, 0, -589837, 1610612737, 0, -589836, 1610612737, 0, -589835, 1, 0, -589834, -1610612736, 0, -655338, -1073741824, 0, -655337, 1, 0, -655336, 1, 0, -655335, 1, 0, -655334, 1, 0, -655333, 1, 0, -655332, -1610612736, 0, -524304, -1073741824, 0, -524303, 1610612737, 0, -524302, 1610612737, 0, -524301, 1, 0, -524300, 1, 0, -524299, 1, 0, -524298, -1610612736, 0, -589802, -1073741824, 0, -589801, 1, 0, -589800, 1, 0, -589799, 1, 0, -589798, 1, 0, -589797, 1, 0, -589796, -1610612736, 0, -458768, -1073741824, 0, -458767, 1, 0, -458766, 1, 0, -458765, 1, 0, -458764, 1, 0, -458763, 1, 0, -458762, -1610612736, 0, -524266, -1073741824, 0, -524265, 1, 0, -524264, 1, 0, -524263, 1, 0, -524262, 1, 0, -524261, 1, 0, -524260, -1610612736, 0, -393232, -1073741824, 0, -393231, 1, 0, -393230, 1, 0, -393229, 1, 0, -393228, 1, 0, -393227, 1, 0, -393226, -1610612736, 0, -458730, -1073741824, 0, -458729, 1, 0, -458728, 1, 0, -458727, 1, 0, -458726, 1, 0, -458725, 1, 0, -458724, -1610612736, 0, -327696, -1073741824, 0, -327695, 1, 0, -327694, 1, 0, -327693, 1, 0, -327692, 1, 0, -327691, 1, 0, -327690, -1610612736, 0, -393194, -1073741824, 0, -393193, 1, 0, -393192, 1, 0, -393191, 1, 0, -393190, 1, 0, -393189, 1, 0, -393188, -1610612736, 0, -262160, -1073741824, 0, -262159, 1, 0, -262158, 1, 0, -262157, 1, 0, -262156, 1, 0, -262155, 1, 0, -262154, -1610612736, 0, -327658, -1073741824, 0, -327657, 1, 0, -327656, 1, 0, -327655, 1, 0, -327654, 1, 0, -327653, 1, 0, -327652, -1610612736, 0, -196624, -1073741824, 0, -196623, 1, 0, -196622, 1, 0, -196621, 1, 0, -196620, 1, 0, -196619, 1, 0, -196618, -1610612736, 0, -262122, -1073741824, 0, -262121, 1, 0, -262120, 1, 0, -262119, 1, 0, -262118, 1, 0, -262117, 1, 0, -262116, -1610612736, 0, -131088, -1073741824, 0, -131087, 1, 0, -131086, 1, 0, -131085, 1, 0, -131084, 1, 0, -131083, 1, 0, -131082, -1610612736, 0, -196586, -1073741824, 0, -196585, 1, 0, -196584, 1, 0, -196583, 1, 0, -196582, 1, 0, -196581, 1, 0, -196580, -1610612736, 0, -65552, -1073741824, 0, -65551, 1610612737, 0, -65550, 1610612737, 0, -65549, 1610612737, 0, -65548, 1610612737, 0, -65547, 1610612737, 0, -65546, -1610612736, 0, -131050, -1073741824, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -131044, -1610612736, 0, -16, -1073741824, 0, -15, 1610612737, 0, -14, 1610612737, 0, -13, 1610612737, 0, -12, 1610612737, 0, -11, 1610612737, 0, -10, -1610612736, 0, -65514, -1073741824, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, -1610612736, 0, 65520, -1073741824, 0, 65521, 1610612737, 0, 65522, 1610612737, 0, 65523, 1610612737, 0, 65524, 1610612737, 0, 65525, 1, 0, 65526, -1610612736, 0, 22, -1073741824, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, -1610612736, 0, 131056, -1073741824, 0, 131057, 1610612737, 0, 131058, 1610612737, 0, 131059, 1610612737, 0, 131060, 1610612737, 0, 131061, 1, 0, 131062, -1610612736, 0, 65558, -1073741824, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, -1610612736, 0, 196592, -1073741824, 0, 196593, 1610612737, 0, 196594, 1610612737, 0, 196595, 1610612737, 0, 196596, 1610612737, 0, 196597, 1, 0, 196598, 3, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, -1073741821, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, -1610612736, 0, 262128, -1073741824, 0, 262129, 1610612737, 0, 262130, 1610612737, 0, 262131, 1610612737, 0, 262132, 1610612737, 0, 262133, 1, 0, 262134, 1, 0, 262135, 1, 0, 262136, 1, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, -1610612736, 0, 327664, -1073741824, 0, 327665, 1610612737, 0, 327666, 1610612737, 0, 327667, 1610612737, 0, 327668, 1610612737, 0, 327669, 1610612737, 0, 327670, 1610612737, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, -1610612736, 0, 393200, -1073741824, 0, 393201, 1610612737, 0, 393202, 1610612737, 0, 393203, 1610612737, 0, 393204, 1610612737, 0, 393205, 1610612737, 0, 393206, 1610612737, 0, 393207, 1, 0, 393208, 1, 0, 393209, 1, 0, 393210, 1, 0, 393211, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, -1610612736, 0, 458736, -1073741824, 0, 458737, 1610612737, 0, 458738, 1610612737, 0, 458739, 1610612737, 0, 458740, 1610612737, 0, 458741, -1073741823, 0, 458742, -1073741823, 0, 458743, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, -1610612736, 0, 524272, -1073741824, 0, 524273, 1610612737, 0, 524274, 1610612737, 0, 524275, 1610612737, 0, 524276, 1610612737, 0, 524277, 1610612737, 0, 524278, 1610612737, 0, 524279, 1610612737, 0, 524280, 1610612737, 0, 524281, 1610612737, 0, 524282, 1610612737, 0, 524283, 1610612737, 0, 524284, 1610612737, 0, 524285, 1610612737, 0, 524286, 1610612737, 0, 524287, 1610612737, 0, 458752, 1610612737, 0, 458753, 1610612737, 0, 458754, 1610612737, 0, 458755, 1610612737, 0, 458756, 1610612737, 0, 458757, 1610612737, 0, 458758, 1610612737, 0, 458759, 1610612737, 0, 458760, 1610612737, 0, 458761, 1610612737, 0, 458762, 1610612737, 0, 458763, 1610612737, 0, 458764, 1610612737, 0, 458765, 1610612737, 0, 458766, 1610612737, 0, 458767, 1610612737, 0, 458768, 1610612737, 0, 458769, 1610612737, 0, 458770, 1610612737, 0, 458771, 1610612737, 0, 458772, 1610612737, 0, 458773, 1610612737, 0, 458774, 1610612737, 0, 458775, 1610612737, 0, 458776, 1610612737, 0, 458777, 1610612737, 0, 458778, 1610612737, 0, 458779, 1610612737, 0, 458780, -1610612736, 0, 589808, 1610612738, 0, 589809, 1610612736, 0, 589810, 1610612736, 0, 589811, 1610612736, 0, 589812, 1610612736, 0, 589813, 1610612736, 0, 589814, 1610612736, 0, 589815, 1610612736, 0, 589816, 1610612736, 0, 589817, 1610612736, 0, 589818, 1610612736, 0, 589819, 1610612736, 0, 589820, 1610612736, 0, 589821, 1610612736, 0, 589822, 1610612736, 0, 589823, 1610612736, 0, 524288, 1610612736, 0, 524289, 1610612736, 0, 524290, 1610612736, 0, 524291, 1610612736, 0, 524292, 1610612736, 0, 524293, 1610612736, 0, 524294, 1610612736, 0, 524295, 1610612736, 0, 524296, 1610612736, 0, 524297, 1610612736, 0, 524298, 1610612736, 0, 524299, 1610612736, 0, 524300, 1610612736, 0, 524301, 1610612736, 0, 524302, 1610612736, 0, 524303, 1610612736, 0, 524304, 1610612736, 0, 524305, 1610612736, 0, 524306, 1610612736, 0, 524307, 1610612736, 0, 524308, 1610612736, 0, 524309, 1610612736, 0, 524310, 1610612736, 0, 524311, 1610612736, 0, 524312, 1610612736, 0, 524313, 1610612736, 0, 524314, 1610612736, 0, 524315, 1610612736, 0, 524316, -1610612734, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 0, 42 )
z_index = 20
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -1 )
z_index = 100
current = true
zoom = Vector2( 0.2, 0.2 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 5 )
hframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/Crouch = SubResource( 15 )
anims/Fall = SubResource( 16 )
anims/Idle = SubResource( 17 )
anims/Jump = SubResource( 18 )
anims/RESET = SubResource( 19 )
anims/Run = SubResource( 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PoolVector2Array( -5, 22, 4, 22, 4, 12, 9, 7, 9, 4, 11, 2, 11, -3, 10, -3, 10, -14, 8, -17, -8, -17, -11, -14, -11, -3, -12, -3, -12, 2, -10, 4, -10, 7, -5, 12 )

[node name="CrouchCollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
position = Vector2( 0, 10 )
polygon = PoolVector2Array( 4, 12, 9, 7, 9, 4, 11, 2, 11, -3, 10, -3, 10, -14, 8, -17, -8, -17, -11, -14, -11, -3, -12, -3, -12, 2, -10, 4, -10, 7, -5, 12 )

[node name="Spike" type="Area2D" parent="."]
position = Vector2( 128, 0 )

[node name="spikes_tileset" type="TileMap" parent="Spike"]
tile_set = SubResource( 21 )
cell_size = Vector2( 16, 16 )
collision_use_parent = true
format = 1

[node name="Sign" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 64 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Sign"]
position = Vector2( 56, -16 )
texture = ExtResource( 7 )
hframes = 10
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sign"]
position = Vector2( 56, -12 )
shape = SubResource( 22 )

[node name="QuestionMark" type="Sprite" parent="Sign"]
position = Vector2( 56, -32 )
texture = ExtResource( 8 )
hframes = 20
vframes = 20

[node name="Finish" type="Area2D" parent="."]
position = Vector2( 56, 32 )

[node name="TileMap" type="TileMap" parent="Finish"]
tile_set = SubResource( 25 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( -2621399, 0, 0 )

[connection signal="body_entered" from="Sign" to="Sign" method="_on_Interactable_body_entered"]
[connection signal="body_exited" from="Sign" to="Sign" method="_on_Interactable_body_exited"]
